--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "strongs",
-    "devDependencies": {
-        "coffee-script": "",
-        "grunt": "",
-        "grunt-contrib-coffee": ""
-    }
+  "name": "strongs",
+  "devDependencies": {
+    "coffee-script": "",
+    "grunt": "",
+    "grunt-contrib-coffee": "",
+    "grunt-contrib-watch": "^0.6.1"
+  }
 }
