--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "coffee-script": "",
     "grunt": "",
     "grunt-contrib-coffee": "",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-less": "^1.0.0"
   }
 }
