--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "",
     "grunt-contrib-coffee": "",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-less": "^1.0.0"
+    "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-copy": "^0.7.0"
   }
 }
