--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "tooltipster": "",
     "jquery": "",
     "polymer": "Polymer/polymer#~0.5.2",
-    "core-ajax": "Polymer/core-ajax#~0.5.2"
+    "core-ajax": "Polymer/core-ajax#~0.5.2",
+    "angular-local-storage": "~0.1.5"
   },
   "private": true
 }
